{
  "version": 4,
  "terraform_version": "1.5.6",
  "serial": 81,
  "lineage": "d11bb16b-672b-a7c9-0345-da80a748bcc6",
  "resources": [
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "personal",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/16a1a756-aaf0-4c8b-9e40-c890ecc0ef6e/resourceGroups/personal-resources/providers/Microsoft.Network/networkInterfaces/personal-nic-0",
            "internal_domain_name_suffix": "4ltasfqyhyaexoydscbgw0hkbb.rx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "internal",
                "primary": true,
                "private_ip_address": "10.0.1.5",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/16a1a756-aaf0-4c8b-9e40-c890ecc0ef6e/resourceGroups/personal-resources/providers/Microsoft.Network/publicIPAddresses/personal-publicip-0",
                "subnet_id": "/subscriptions/16a1a756-aaf0-4c8b-9e40-c890ecc0ef6e/resourceGroups/personal-resources/providers/Microsoft.Network/virtualNetworks/personal-network/subnets/personal-subnet"
              }
            ],
            "location": "centralindia",
            "name": "personal-nic-0",
            "private_ip_address": "10.0.1.5",
            "private_ip_addresses": [
              "10.0.1.5"
            ],
            "resource_group_name": "personal-resources"
          },
          "dependencies": [
            "azurerm_public_ip.personal",
            "azurerm_resource_group.personal",
            "azurerm_subnet.personal",
            "azurerm_virtual_network.personal"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/16a1a756-aaf0-4c8b-9e40-c890ecc0ef6e/resourceGroups/personal-resources/providers/Microsoft.Network/networkInterfaces/personal-nic-1",
            "internal_domain_name_suffix": "4ltasfqyhyaexoydscbgw0hkbb.rx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "internal",
                "primary": true,
                "private_ip_address": "10.0.1.6",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/16a1a756-aaf0-4c8b-9e40-c890ecc0ef6e/resourceGroups/personal-resources/providers/Microsoft.Network/publicIPAddresses/personal-publicip-1",
                "subnet_id": "/subscriptions/16a1a756-aaf0-4c8b-9e40-c890ecc0ef6e/resourceGroups/personal-resources/providers/Microsoft.Network/virtualNetworks/personal-network/subnets/personal-subnet"
              }
            ],
            "location": "centralindia",
            "name": "personal-nic-1",
            "private_ip_address": "10.0.1.6",
            "private_ip_addresses": [
              "10.0.1.6"
            ],
            "resource_group_name": "personal-resources"
          },
          "dependencies": [
            "azurerm_public_ip.personal",
            "azurerm_resource_group.personal",
            "azurerm_subnet.personal",
            "azurerm_virtual_network.personal"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/16a1a756-aaf0-4c8b-9e40-c890ecc0ef6e/resourceGroups/personal-resources/providers/Microsoft.Network/networkInterfaces/personal-nic-2",
            "internal_domain_name_suffix": "4ltasfqyhyaexoydscbgw0hkbb.rx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "internal",
                "primary": true,
                "private_ip_address": "10.0.1.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/16a1a756-aaf0-4c8b-9e40-c890ecc0ef6e/resourceGroups/personal-resources/providers/Microsoft.Network/publicIPAddresses/personal-publicip-2",
                "subnet_id": "/subscriptions/16a1a756-aaf0-4c8b-9e40-c890ecc0ef6e/resourceGroups/personal-resources/providers/Microsoft.Network/virtualNetworks/personal-network/subnets/personal-subnet"
              }
            ],
            "location": "centralindia",
            "name": "personal-nic-2",
            "private_ip_address": "10.0.1.4",
            "private_ip_addresses": [
              "10.0.1.4"
            ],
            "resource_group_name": "personal-resources"
          },
          "dependencies": [
            "azurerm_public_ip.personal",
            "azurerm_resource_group.personal",
            "azurerm_subnet.personal",
            "azurerm_virtual_network.personal"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "personal",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/16a1a756-aaf0-4c8b-9e40-c890ecc0ef6e/resourceGroups/personal-resources/providers/Microsoft.Network/networkSecurityGroups/personal-nsg",
            "location": "centralindia",
            "name": "personal-nsg",
            "resource_group_name": "personal-resources",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "10.0.1.4",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "22",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "allow-ssh-2",
                "priority": 102,
                "protocol": "Tcp",
                "source_address_prefix": "0.0.0.0/0",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "10.0.1.5",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "22",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "allow-ssh-0",
                "priority": 100,
                "protocol": "Tcp",
                "source_address_prefix": "0.0.0.0/0",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "10.0.1.6",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "22",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "allow-ssh-1",
                "priority": 101,
                "protocol": "Tcp",
                "source_address_prefix": "0.0.0.0/0",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.personal"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "personal",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "10.0.1.5",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "22",
            "destination_port_ranges": [],
            "direction": "Inbound",
            "id": "/subscriptions/16a1a756-aaf0-4c8b-9e40-c890ecc0ef6e/resourceGroups/personal-resources/providers/Microsoft.Network/networkSecurityGroups/personal-nsg/securityRules/allow-ssh-0",
            "name": "allow-ssh-0",
            "network_security_group_name": "personal-nsg",
            "priority": 100,
            "protocol": "Tcp",
            "resource_group_name": "personal-resources",
            "source_address_prefix": "0.0.0.0/0",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_interface.personal",
            "azurerm_network_security_group.personal",
            "azurerm_public_ip.personal",
            "azurerm_resource_group.personal",
            "azurerm_subnet.personal",
            "azurerm_virtual_network.personal"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "10.0.1.6",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "22",
            "destination_port_ranges": [],
            "direction": "Inbound",
            "id": "/subscriptions/16a1a756-aaf0-4c8b-9e40-c890ecc0ef6e/resourceGroups/personal-resources/providers/Microsoft.Network/networkSecurityGroups/personal-nsg/securityRules/allow-ssh-1",
            "name": "allow-ssh-1",
            "network_security_group_name": "personal-nsg",
            "priority": 101,
            "protocol": "Tcp",
            "resource_group_name": "personal-resources",
            "source_address_prefix": "0.0.0.0/0",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_interface.personal",
            "azurerm_network_security_group.personal",
            "azurerm_public_ip.personal",
            "azurerm_resource_group.personal",
            "azurerm_subnet.personal",
            "azurerm_virtual_network.personal"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "10.0.1.4",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "22",
            "destination_port_ranges": [],
            "direction": "Inbound",
            "id": "/subscriptions/16a1a756-aaf0-4c8b-9e40-c890ecc0ef6e/resourceGroups/personal-resources/providers/Microsoft.Network/networkSecurityGroups/personal-nsg/securityRules/allow-ssh-2",
            "name": "allow-ssh-2",
            "network_security_group_name": "personal-nsg",
            "priority": 102,
            "protocol": "Tcp",
            "resource_group_name": "personal-resources",
            "source_address_prefix": "0.0.0.0/0",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_interface.personal",
            "azurerm_network_security_group.personal",
            "azurerm_public_ip.personal",
            "azurerm_resource_group.personal",
            "azurerm_subnet.personal",
            "azurerm_virtual_network.personal"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "personal",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Dynamic",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "id": "/subscriptions/16a1a756-aaf0-4c8b-9e40-c890ecc0ef6e/resourceGroups/personal-resources/providers/Microsoft.Network/publicIPAddresses/personal-publicip-0",
            "idle_timeout_in_minutes": 4,
            "ip_version": "IPv4",
            "location": "centralindia",
            "name": "personal-publicip-0",
            "resource_group_name": "personal-resources",
            "sku": "Basic",
            "sku_tier": "Regional"
          },
          "dependencies": [
            "azurerm_resource_group.personal"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Dynamic",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "id": "/subscriptions/16a1a756-aaf0-4c8b-9e40-c890ecc0ef6e/resourceGroups/personal-resources/providers/Microsoft.Network/publicIPAddresses/personal-publicip-1",
            "idle_timeout_in_minutes": 4,
            "ip_version": "IPv4",
            "location": "centralindia",
            "name": "personal-publicip-1",
            "resource_group_name": "personal-resources",
            "sku": "Basic",
            "sku_tier": "Regional"
          },
          "dependencies": [
            "azurerm_resource_group.personal"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Dynamic",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "id": "/subscriptions/16a1a756-aaf0-4c8b-9e40-c890ecc0ef6e/resourceGroups/personal-resources/providers/Microsoft.Network/publicIPAddresses/personal-publicip-2",
            "idle_timeout_in_minutes": 4,
            "ip_version": "IPv4",
            "location": "centralindia",
            "name": "personal-publicip-2",
            "resource_group_name": "personal-resources",
            "sku": "Basic",
            "sku_tier": "Regional"
          },
          "dependencies": [
            "azurerm_resource_group.personal"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "personal",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.1.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/16a1a756-aaf0-4c8b-9e40-c890ecc0ef6e/resourceGroups/personal-resources/providers/Microsoft.Network/virtualNetworks/personal-network/subnets/personal-subnet",
            "name": "personal-subnet",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "personal-resources",
            "virtual_network_name": "personal-network"
          },
          "dependencies": [
            "azurerm_resource_group.personal",
            "azurerm_virtual_network.personal"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "personal",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.0.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "1609e6f2-3e18-4b00-bb03-90826b68ea09",
            "id": "/subscriptions/16a1a756-aaf0-4c8b-9e40-c890ecc0ef6e/resourceGroups/personal-resources/providers/Microsoft.Network/virtualNetworks/personal-network",
            "location": "centralindia",
            "name": "personal-network",
            "resource_group_name": "personal-resources",
            "subnet": [
              {
                "address_prefix": "10.0.1.0/24",
                "id": "/subscriptions/16a1a756-aaf0-4c8b-9e40-c890ecc0ef6e/resourceGroups/personal-resources/providers/Microsoft.Network/virtualNetworks/personal-network/subnets/personal-subnet",
                "name": "personal-subnet"
              }
            ]
          },
          "dependencies": [
            "azurerm_resource_group.personal"
          ]
        }
      ]
    }
  ]
}